<resources>
    <string name="app_name">克劳德盘</string>
    <string name="splash_string">点此进入</string>
    <string name="phone_number">手机号码</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="button_create">创建文件夹</string>
    <string name="button_goto_upload">上传文件</string>
    <string name="button_goto_cloud">返回网盘</string>
    <string name="button_goto_login">更换账号</string>
    <string name="pick_photo">传照片</string>
    <string name="upload">上传</string>
    <string name="upload_list">上传列表</string>
    <string name="remove_from_upload_list">移除</string>
    <string name="swap_to_show_download">滑动显示下载进度</string>


</resources>
